--- a/1.HTML
+++ b/1.HTML
@@ -7,6 +7,33 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>HELLO</H1>>
+    <H1>HELLO</H1>
 </body>
-</html>
+     <h1>hello</h1>
+     <table border = '1'>
+    <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+    </tr>
+    <tr>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+        <td>10</td>
+    </tr>
+    <tr>
+        <td>11</td>
+        <td>12</td>
+        <td>13</td>
+        <td>14</td>
+        <td>15</td>
+        
+
+        
+
+    </tr>
+     </table>
